fixed about spacing

--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -25,6 +25,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-top: 3em;
   gap: 4em;
   width: 100%;
   padding: 1em 0;
